--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Tutorial on  Normalization of Microbiome Data"
+title: "Tutorial on Normalization of Microbiome Data"
 # author: "Emily Palmer"
 # date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
@@ -14,6 +14,7 @@ description: "A tutorial on normalization methods for microbiome data and discus
 
 ```{r, packages, include = F, echo = F}
 library(tidyverse)
+library(stringr)
 library(patchwork)
 library(gridExtra)
 library(viridis)
@@ -30,13 +31,13 @@ set.seed(238)
 
 ## The importance of normalization
 
-Microbiome data must be normalized before any statistical analysis can be performed. Following the process of sequencing and assigning raw reads into counts per observed and classified identified taxa classes/OTUs/ASVs, the data are in the form of a matrix of read counts, referred to as a feature table of raw counts. Normalization is the process of transforming raw read count data into data that can be compared between samples. Statistical analysis on this count matrix is then performed depending on the goal of the experiment. Common analysis goals include community-level analysis (alpha/beta diversity), differential abundance testing (the parallel of differential expression testing in gene expression studies), and network analysis.
+Microbiome data must be normalized before any statistical analysis can be performed. Following the process of sequencing and assigning raw reads into counts per observed and classified identified taxa classes/OTUs/ASVs, microbiome data consist of a matrix of read counts, referred to as a feature table of raw counts. Normalization is the process of transforming raw read count data into data that can be compared between samples. Statistical analysis on this count matrix is then performed depending on the goal of the experiment. Common analysis goals include community-level analysis (alpha/beta diversity), differential abundance testing (the parallel of differential expression testing in gene expression studies), and network analysis.
 
 <!-- Terminology "feature table" and taxonomy table, and metadata" , and potentially phyloenetic tree -->
 
 <!-- insert table example of what MB data look like??  what is a raw read/what are asvs or otus -->
 
-Analysis of composition, differences, connections, etc. should be done based only on true biological aspects. However, technical variation in counts across samples is a given hurdle that must be accounted for. Biases can arise in the sequencing process, sample preparation, contamination, preferential amplification, and can manifest in differences in sparsity and unequal sequencing depths [@salter2014]. An effective normalization strategy should put all samples on equal footing so interpretations are on biological signals, not technical signals such as sequencing depth. Currently, there is no known 'best' normalization method that removes all technical artifacts leaving only biological signals.
+Analysis of composition, differences, connections, etc., should be done based only on true biological aspects. However, technical variation in counts across samples is a given hurdle that must be accounted for. Biases can arise in the sequencing process, sample preparation, contamination, preferential amplification, and can manifest in differences in sparsity and unequal sequencing depths [@salter2014]. An effective normalization strategy should put all samples on equal footing so interpretations are on biological signals, not technical signals such as sequencing depth. Currently, there is no known 'best' normalization method that removes all technical artifacts leaving only biological signals.
 
 Due to the sequencing technology, samples will have different sequencing depths, or the sum of all the counts in a sample. Directly comparing raw counts between samples is not possible. To illustrate this, consider the counts of Taxon 1, across two samples shown below. In Sample A, this taxon has a count of 230, and in Sample B, this taxon has a count of 23. Is this taxon differentially abundant between samples? As we see below, the way we normalize the data can change how we would answer this question. 
 
@@ -46,12 +47,11 @@ sampleA <- c(230,5)
 sampleB <- c(23,5)
 ASVs <- c("Taxon 1", "Taxon 2")
 df <- tibble(ASVs, sampleA, sampleB) 
-  
-  
+
 kable(df, booktabs = T, 
       col.names = c("Taxa", "Sample A", "Sample B"), 
-                 caption = "The raw counts of taxon 1 are different, and the raw counts of taxon 2 are equal. Sampling depth is not accounted for.", 
-          format = "pipe")
+      caption = "The raw counts of taxon 1 are different, and the raw counts of taxon 2 are equal. Sampling depth is not accounted for.", 
+      format = "pipe")
 ```
 
 
@@ -59,29 +59,34 @@ kable(df, booktabs = T,
 
 df <- data.frame(sampleA, sampleB, ASVs)
 p1 <- data.frame(sampleA, sampleB, ASVs) %>% 
-    pivot_longer(sampleA:sampleB, names_to = "sample", values_to = "Count") %>% 
-    ggplot(aes(y = Count, x = ASVs, fill = sample)) + 
-        geom_bar(stat = "identity", position = position_dodge()) + 
-    ggtitle("Observed raw counts of 2 taxa in 2 samples", 
-            subtitle = "The raw counts of taxon 1 are different, and the raw counts of taxon 2 are equal. Sampling depth is not accounted for") + 
-    theme_minimal() + 
-    theme(legend.position="bottom", 
-          legend.title = element_blank(), 
-          axis.title.x = element_blank()) + 
+  pivot_longer(sampleA:sampleB, names_to = "sample", values_to = "Count") %>% 
+  ggplot(aes(y = Count, x = ASVs, fill = sample)) + 
+  geom_bar(stat = "identity", position = position_dodge()) + 
+  labs(title = "Observed raw counts of 2 taxa in 2 samples", 
+       subtitle = strwrap("The raw counts of taxon 1 are different, and the raw counts of taxon 2 are equal. Sampling depth is not accounted for",60)) + 
+  theme_minimal() + 
+  theme(legend.position="bottom", 
+        legend.title = element_blank(), 
+        axis.title.x = element_blank()) + 
   scale_color_viridis(discrete = TRUE, option = "D")+
   scale_fill_viridis(discrete = TRUE) 
     
-p2 <- data.frame(sampleA = sampleA/sum(sampleA), sampleB = sampleB/sum(sampleB), ASVs) %>% 
-    pivot_longer(sampleA:sampleB, names_to = "sample", values_to = "Proportion") %>% 
-    ggplot(aes(y = Proportion, x = ASVs, fill = sample)) + 
-        geom_bar(stat = "identity", position = position_dodge()) + 
-    ggtitle("Normalized counts of 2 taxa in 2 samples", 
-            subtitle = "When library size is accounted for, the difference between sample A and B appears smaller, and there now appears to be a difference in taxon 2, even though the raw counts are identical")+ 
-    theme_minimal() + 
-    theme(legend.position="bottom", 
-          legend.title = element_blank(), 
-          axis.title.x = element_blank()) + 
-  scale_color_viridis(discrete = TRUE, option = "E")+
+p2 <-
+  data.frame(sampleA = sampleA / sum(sampleA),
+             sampleB = sampleB / sum(sampleB),
+             ASVs) %>%
+  pivot_longer(sampleA:sampleB, names_to = "sample", values_to = "Proportion") %>%
+  ggplot(aes(y = Proportion, x = ASVs, fill = sample)) +
+  geom_bar(stat = "identity", position = position_dodge()) +
+  labs(title = "Normalized counts of 2 taxa in 2 samples",
+       subtitle = strwrap("When library size is accounted for, the difference between sample A and B appears smaller, and there now appears to be a difference in taxon 2, even though the raw counts are identical", 60)) + 
+  theme_minimal() +
+  theme(
+    legend.position = "bottom",
+    legend.title = element_blank(),
+    axis.title.x = element_blank()
+  ) +
+  scale_color_viridis(discrete = TRUE, option = "E") +
   scale_fill_viridis(discrete = TRUE) 
 
 p1 / p2 + plot_annotation(tag_levels = 'A', tag_prefix = 'Figure ')+
@@ -89,17 +94,13 @@ p1 / p2 + plot_annotation(tag_levels = 'A', tag_prefix = 'Figure ')+
 # grid.arrange(tableGrob(df),p1,p1, nrow = 1)
 ```
 
-Normalization for microbiome data often refers to standardizing sequencing depth across samples. One common approach to this is a scaling-based approach, where a scaling factor is calculated for every sample and the counts for each taxon are divided by the scaling factor for that sample. Figure B shows the same data as Figure A, but where each sample has been transformed into proportions by dividing by the total counts for each sample. The difference in Taxon 1 between samples appears much smaller. However, now there appears to be a difference in Taxon 2, even though the counts were originally the same. This is because in sample B, Taxon 1 consists of a higher proportion of the total count than in sample A.
+One goal for normalization of microbiome data is the standardization of sequencing depth across samples. One common approach to this is a scaling-based approach, where a scaling factor is calculated for every sample and the counts for each taxon are divided by the scaling factor for that sample. Figure B shows the same data as Figure A, but where each sample has been transformed into proportions by dividing by the total counts for each sample. The difference in Taxon 1 between samples appears much smaller. However, now there appears to be a difference in Taxon 2, even though the counts were originally the same. This is because in sample B, Taxon 1 consists of a higher proportion of the total count than in sample A.
 
 This demonstrates the importance of normalization, but also the artifacts that can occur depending on the method.
 
 ## The compositional nature of microbiome data
 
 Microbiome data are inherently compositional. The counts of the collection of taxa that make up each sample are constrained by the total sum, or sequencing depth for that sample. This means that the count of each sampled taxon is a portion of a larger whole. Each observed taxon is not independent. As we saw in the above example, before normalization, Taxon 2 was equal between samples. After converting to proportions, Taxon 2 no longer appears equal. If there is a difference between two samples it is unclear if that difference is because of a true difference in that taxon or if that taxon is changing because of differences in another taxon. Numerous traditional statistical methods rely on an independence assumption, which is not met with microbiome data. This can lead to spurious correlations that exist only because of the compositional nature and not any true signal.
-
-<!-- We do not have knowledge of the absolute abundance. -->
-
-<!-- Add figure number and legend  -->
 
 With library size as the sum constraint for each sample, if we know in a biological system that after an event occurs (treatment), the red taxon decreases, this will change the composition of the sampled blue taxon regardless of its change or lack thereof in the underlying population.
 
@@ -142,15 +143,6 @@ pc2 <- dfafter %>%
     theme(legend.position = "none")+ 
     theme(plot.background = element_rect(size = 1, color = "black"))
 
-# 
-# rbind(data.frame(x = sampleAx, y =  sampleAy, color =  asv, treatment = "Before"),
-#       data.frame(x = sampleBx, y = sampleBy, color = asv2, treatment = "After")) %>% 
-#     ggplot(aes(x = x, y = y, color = color, group = treatment)) + 
-#     geom_point(size = 2) + 
-#     facet_wrap(vars(treatment)) + 
-#     theme_void() + theme(legend. position = "none")
-
-
 pc1 + pc2
 ```
 
@@ -178,25 +170,6 @@ tibble(sample, blue_a, red_a) %>%
 
 This observed increase in the proportion of blue is due to the compositional nature of the sampled points, and not any true difference in the blue population.
 
-### Log ratio transformation methods
-
-The log-ratio based methodology developed by Aitchison in the 1980s is useful for analyzing compositional data [@aitchison1982]. Taking the logarithm of ratios can be an appropriate transformation for compositional data, so standard statistical tests can be appropriate again. This transformation removes the issue of standardizing/normalizing different sampling depths. The sampling depth for a given sample will not distort the biological covariance or correlation structure.
-
-<!-- Explain logs, log ratios.  -->
-
-This log-ratio method has a drawback, which is the decision of how to define the denominator. One approach to this problem is to use one sample as the reference. This sample should be 'representative'. The log-ratio transformation is then the ratio of every other taxon to that representative sample. Of course, knowledge of what makes a sample representative is hard to come by and often unknown, and subsequent results can be affected by this choice. This method is frequently called the additive log-ratio approach (alr). The alternative approach is to use the data to create a pseudo-reference sample. This pseudo-reference sample is the geometric mean of the counts of all taxa. This is called the centered log-ratio method.
-
-<!-- A further method is the isometric log-ratio transofrmation (ilr), which is the product of the clr and the transpose of a matrix which consists of elements that are clr-transformed components of an orthonomal basis. -->
-
-<!-- (REWORD).  -->
-
-<!-- The theory developed there, however, is for data with different characteristics than microbiome data. -->
-
-<!-- Microbiome data is high dimensional, and. -->
-
-While promising, these log-ratio methods have drawbacks in practice. Microbiome data are often incredibly sparse, with up to 80-90% of count matrices containing zero counts. For ratio transformations, if we have sparse data, the geometric mean can be zero. Then the ratio is undefined, and further, so is the logarithm of zero count taxa.
-
-One solution to this is adding a small pseudo count to every element in the data. This removes problems occurring from having zero counts in the data, but there is not a clear best choice of what pseudo count to use, and it the choice can impact downstream results.
 
 <!-- INCLUDE EXAMPLE?  -->
 
