--- a/index.Rmd
+++ b/index.Rmd
@@ -43,6 +43,7 @@ Due to the sequencing technology, samples will have different sequencing depths,
 
 
 ```{r, echo = F}
+# Create two samples with two taxa each 
 sampleA <- c(230,5)
 sampleB <- c(23,5)
 ASVs <- c("Taxon 1", "Taxon 2")
@@ -62,14 +63,14 @@ p1 <- data.frame(sampleA, sampleB, ASVs) %>%
   pivot_longer(sampleA:sampleB, names_to = "sample", values_to = "Count") %>% 
   ggplot(aes(y = Count, x = ASVs, fill = sample)) + 
   geom_bar(stat = "identity", position = position_dodge()) + 
-  labs(title = "Observed raw counts of 2 taxa in 2 samples", 
-       subtitle = strwrap("The raw counts of taxon 1 are different, and the raw counts of taxon 2 are equal. Sampling depth is not accounted for",60)) + 
+  labs(title = "Raw counts of 2 taxa in 2 samples") + 
+       # subtitle = strwrap("The raw counts of taxon 1 are different, and the raw counts of taxon 2 are equal. Sampling depth is not accounted for",60)) + 
   theme_minimal() + 
-  theme(legend.position="bottom", 
-        legend.title = element_blank(), 
+  theme(legend.title = element_blank(), 
         axis.title.x = element_blank()) + 
   scale_color_viridis(discrete = TRUE, option = "D")+
-  scale_fill_viridis(discrete = TRUE) 
+  scale_fill_viridis(discrete = TRUE, 
+                     labels = c("Sample A", "Sample B")) 
     
 p2 <-
   data.frame(sampleA = sampleA / sum(sampleA),
@@ -78,29 +79,27 @@ p2 <-
   pivot_longer(sampleA:sampleB, names_to = "sample", values_to = "Proportion") %>%
   ggplot(aes(y = Proportion, x = ASVs, fill = sample)) +
   geom_bar(stat = "identity", position = position_dodge()) +
-  labs(title = "Normalized counts of 2 taxa in 2 samples",
-       subtitle = strwrap("When library size is accounted for, the difference between sample A and B appears smaller, and there now appears to be a difference in taxon 2, even though the raw counts are identical", 60)) + 
+  labs(title = "Normalized counts of 2 taxa in 2 samples") + 
+       # subtitle = strwrap("When library size is accounted for, the difference between sample A and B appears smaller, and there now appears to be a difference in taxon 2, even though the raw counts are identical", 60)) + 
   theme_minimal() +
-  theme(
-    legend.position = "bottom",
-    legend.title = element_blank(),
+  theme(legend.title = element_blank(),
     axis.title.x = element_blank()
   ) +
   scale_color_viridis(discrete = TRUE, option = "E") +
-  scale_fill_viridis(discrete = TRUE) 
+  scale_fill_viridis(discrete = TRUE, 
+                     labels = c("Sample A", "Sample B")) 
 
 p1 / p2 + plot_annotation(tag_levels = 'A', tag_prefix = 'Figure ')+
   plot_layout(guides = 'collect')
-# grid.arrange(tableGrob(df),p1,p1, nrow = 1)
 ```
 
-One goal for normalization of microbiome data is the standardization of sequencing depth across samples. One common approach to this is a scaling-based approach, where a scaling factor is calculated for every sample and the counts for each taxon are divided by the scaling factor for that sample. Figure B shows the same data as Figure A, but where each sample has been transformed into proportions by dividing by the total counts for each sample. The difference in Taxon 1 between samples appears much smaller. However, now there appears to be a difference in Taxon 2, even though the counts were originally the same. This is because in sample B, Taxon 1 consists of a higher proportion of the total count than in sample A.
+One goal for normalization of microbiome data is the standardization of sequencing depth across samples. One common approach to this is a scaling-based approach, where a scaling factor is calculated for every sample and the counts for each taxon are divided by the scaling factor for that sample. Figure B shows the same data as Figure A, but where each sample has been transformed into proportions by dividing by the total counts for each sample. The difference in Taxon 1 between samples appears much smaller. However, now there appears to be a difference in Taxon 2 between samples, even though the counts were originally the same. This is because in sample B, Taxon 2 consists of a higher proportion of the total count than it does in sample A.
 
 This demonstrates the importance of normalization, but also the artifacts that can occur depending on the method.
 
 ## The compositional nature of microbiome data
 
-Microbiome data are inherently compositional. The counts of the collection of taxa that make up each sample are constrained by the total sum, or sequencing depth for that sample. This means that the count of each sampled taxon is a portion of a larger whole. Each observed taxon is not independent. As we saw in the above example, before normalization, Taxon 2 was equal between samples. After converting to proportions, Taxon 2 no longer appears equal. If there is a difference between two samples it is unclear if that difference is because of a true difference in that taxon or if that taxon is changing because of differences in another taxon. Numerous traditional statistical methods rely on an independence assumption, which is not met with microbiome data. This can lead to spurious correlations that exist only because of the compositional nature and not any true signal.
+Microbiome data are inherently compositional. The counts of the collection of taxa that make up each sample are constrained by the total sum, or sequencing depth for that sample. This means that the count of each sampled taxon is a portion of a larger whole. Each observed taxon is not independent. As we saw in the above example, before normalization, Taxon 2 was equal between samples. After converting to proportions, the values for Taxon 2 no longer appear equal between samples. If there is a difference between two samples it is unclear if that difference is because of a true difference in that taxon or if that taxon is changing because of differences in another taxon. Numerous traditional statistical methods rely on an independence assumption, which is not met with microbiome data. This can lead to spurious correlations that exist only because of the compositional nature and not any true signal.
 
 With library size as the sum constraint for each sample, if we know in a biological system that after an event occurs (treatment), the red taxon decreases, this will change the composition of the sampled blue taxon regardless of its change or lack thereof in the underlying population.
 
@@ -124,8 +123,9 @@ pc1 <- dfb4  %>%
     theme(legend.position = "none", 
          panel.grid = element_blank()) + 
     theme_void() + 
-    theme(legend.position = "none")+ 
-    theme(plot.background = element_rect(size = 1, color = "black"))
+    theme(legend.position = "none",
+          plot.title = element_text(hjust = 0.5),
+          plot.background = element_rect(size = 1, color = "black"))
 
 sampleB_index <- sample(1:90, 10)
 sampleBx <- c(sampleA_ASV1x[sampleB_index],sampleA_ASV2x)
@@ -140,13 +140,14 @@ pc2 <- dfafter %>%
     geom_point(data = dfsampledafter, pch = 24, size = 5, color = "black")+
     ggtitle("Population after treatment") + 
     theme_void() +
-    theme(legend.position = "none")+ 
-    theme(plot.background = element_rect(size = 1, color = "black"))
+    theme(legend.position = "none",
+          plot.title = element_text(hjust = 0.5),
+          plot.background = element_rect(size = 1, color = "black"))
 
 pc1 + pc2
 ```
 
-Consider again two samples consisting of red and blue points. We can think of the samples as before and after treatment. In the second plot, the number of red dots in the population and in the observed sample has decreased, but the blue remains the same.
+Consider again two samples consisting of red and blue points shown above. The points encompassed by triangles represent the sampled points from the population. We can think of the samples as before and after treatment. In the second plot, the number of red dots in the population and in the observed sample has decreased, but the blue remains the same.
 
 ```{r,  echo = F}
 sample <- c("Before", "After")
@@ -168,20 +169,11 @@ tibble(sample, blue_a, red_a) %>%
 
 <!-- In the after sample, the blue counts have decreased, as we would expect from our knowledge of the population. However, the red counts have increased, even though there is no change in the red population.  -->
 
-This observed increase in the proportion of blue is due to the compositional nature of the sampled points, and not any true difference in the blue population.
+This observed increase in the proportion of blue is due to the compositional nature of the sampled points, and not any true difference in the blue population. 
 
 
-<!-- INCLUDE EXAMPLE?  -->
 
-<!-- ## Zero-inflation of microbiome data -->
 
-<!-- Include section on considerations that are necessary to account for zero-inflation. -->
-
-<!-- ## Intro to the phyloseq package -->
-
-<!-- ## Phyloseq wrapper function -->
-
-<!-- Many normalization methods, especially those developed for other disciplines, take the raw matrix as an argument, along with a vector of the grouping variable. For convenience, we have included a wrapper function for phyloseq that ... -->
 
 <!-- ## Conventions for this bookdown -->
 
